# aquarius-plus-fpga-cores

aq32/: TODO.md
aq32/docs/: aq32.md
aq32/fpga/: aq32.xise  aq32_top.bit  upload.sh
aq32/fpga/src/: aq32.md  aq32_top.ucf  aq32_top.v  bootrom.v  kbbuf.v  spiregs.v
aq32/fpga/src/aqp_shared/: aqp_clkctrl.v  aqp_esp_uart.v  aqp_esp_uart_rx.v  aqp_esp_uart_rx_fifo.v  aqp_esp_uart_tx.v  aqp_esp_uart_tx_fifo.v  aqp_pwm_dac.v
aq32/fpga/src/audio/: fm_ch_attr.v  fm_ch_data_fb.v  fm_eg.v  fm_exp_rom.v  fm_logsin_rom.v  fm_op.v  fm_op_attr.v  fm_op_data_eg.v  fm_op_data_phase.v  fm_pan_l_rom.v  fm_pan_r_rom.v  fm_phase.v  fmsynth.v  genrom.py  lut_exp.v  lut_logsin.v  lut_pan_l.v  lut_pan_r.v  pcm.v  pcm_fifo.v
aq32/fpga/src/cpu/: cpu.v
aq32/fpga/src/lint_wrappers/: RAM128X1D.v  RAM32X1D.v  RAM32X1S.v  RAM64X1D.v  RAM64X1S.v  RAMB16_S2_S2.v  RAMB16_S4_S4.v
aq32/fpga/src/mem/: sram_cache.v
aq32/fpga/src/sim/: sim.sh  sim_fmsynth.sh  sim_sram_ctrl.sh  tb_fmsynth.v  tb_sram_ctrl.v  wave.do  wave_fmsynth.do  wave_sram_ctrl.do
aq32/fpga/src/video/: gfx.v  renderer.v  video.v
aq32/fpga/src/wrappers/: distram128d.v  distram256d.v  distram32d.v  distram32s.v  distram512d.v  distram64d.v  distram64s.v  dpram32k.v  dpram8k.v  dpram_tag.v  linebuf.v  palette.v  sprattr.v  vram.v
aq32/software/: compile_all.sh  copy_all.sh  projects  upload_all.sh
aq32/software/aq32rom/: CMakeLists.txt  common.h  console.c  default.ld  editor.c  file_io.c  main.c  regs.h  run.sh  screen.c  screen.h  start.S  stubs.c  syscalls.c  upload.sh
aq32/software/aq32rom/editor/: controls.h  ctrl_edit_field.c  ctrl_file_list.c  dialog.c  dialog.h  editbuf.c  editbuf.h  editor.c  menu.c  menu.h
aq32/software/aq32rom/lib/: common.h  esp.c  esp.h  screen.c  screen.h  syscalls.c
aq32/software/basic/: CMakeLists.txt  TODO.md  basic.code-workspace  console.c  console.h  main.c  mem_access.h  run.sh  support.md  upload.sh  video_save.c  video_save.h
aq32/software/basic/basic/: basic.c  basic.h
aq32/software/basic/editor/: cmd_edit.c  cmd_file.c  colors.h  ctrl_edit_field.c  ctrl_file_list.c  dialog.c  dialog.h  editbuf.c  editbuf.h  editbuf_linebufs.c  editbuf_split.c  editor.c  editor.h  editor_internal.h  menu.c  menu.h  screen.c  screen.h  video_save.c
aq32/software/basic/help/: help.c  help.h
aq32/software/basic/lib/: common.c  common.h  esp.c  esp.h  malloc.h  start.S  syscalls.c
aq32/software/basic/pcdev/: CMakeLists.txt  buffers.c  console.c  main.c
aq32/software/basic/pcdev/lib/: common.c  common.h
aq32/software/basic/pcdev/test/: test.bas  test2.bas  test3.bas
aq32/software/bitmapdemo/: CMakeLists.txt  keen.data  keen_data.h  main.c  run.sh  upload.sh
aq32/software/boot/: CMakeLists.txt  main.c  run.sh  upload.sh
aq32/software/bootrom/: CMakeLists.txt  boot.c  bootrom.S  default.ld  esp.h
aq32/software/demo/: CMakeLists.txt  default.ld  main.c
aq32/software/edit/: CMakeLists.txt  README.md  default.ld  main.c  run.sh  upload.sh
aq32/software/game_tetris/: CMakeLists.txt  Makefile  frank_compile_instructions_chat.txt  main.c  regs.h
aq32/software/lib/: common.c  common.h  console.c  console.h  csr.h  ctype2.h  default.ld  esp.c  esp.h  project.cmake  readline.c  readline.h  regs.h  screen.h  start.S  syscalls.c
aq32/software/midiplay/: CMakeLists.txt  fmsynth.c  fmsynth.h  instrument_bank.h  main.c  playfile.c  run.sh  upload.sh
aq32/software/pcmtest/: CMakeLists.txt  run.sh  samples.c  upload.sh
aq32/software/shell/: CMakeLists.txt  default.ld  main.c  run.sh  upload.sh
aq32/software/tiledemo/: CMakeLists.txt  main.c  run.sh  upload.sh
aq32/sound_research/: OPLx decapulated.md  fmlut.v  genrom.py  test.py
aqplus/: aqp_top.bit  aquarius-plus.xise  upload.sh
aqplus/src/: aqp_top.v
aqplus/src/video/: gfx.v
(+107 files in other folders)
